The very first version of the customised IPv6 Camel!
The list is _NOT_ complete, and still needs a lot of work.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <script src="ext/d3/d3.min.js"></script>
-    <script src="dns-rfcs.js"></script>
+    <script src="ipv6-rfcs.js"></script>
     <style>
       p,H1 {
         font-family: "Arial", Verdana, sans-serif;
@@ -28,12 +28,12 @@
 
     </style>
     <link rel="shortcut icon" href="camel.png" type="image/png">
-    <title>DNS Camel</title>
+    <title>IPv6 Camel</title>
   </head>
   <body>
-    <a href="https://github.com/ahuPowerDNS/protocol-camel"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/stucchimax/protocol-camel"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
     <p>
-      🐫 Welcome to the DNS Camel Viewer! Please see <a href="https://github.com/ahuPowerDNS/dns-camel">GitHub</a> for what this is &amp; how to contribute.
+      🐫 Welcome to the IPv6 Camel Viewer! Please see <a href="https://github.com/stucchimax/protocol-camel">GitHub</a> for what this is &amp; how to contribute.
     </p>
     <table width="75%"><tr><td>
     <div id="selector"></div></td></tr></table>
@@ -45,4 +45,4 @@
 
   </body>
 </html>
-    
+ 
