--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 
 <html>
-  <head>
+<head>
 
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
@@ -11,6 +11,64 @@
 
     <link rel="stylesheet"
           href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css">
+
+    <script src="ext/d3/d3.min.js"></script>
+    <script src="ipv6-rfcs.js"></script>
+    <style>
+        p, H1 {
+            font-family: "Arial", Verdana, sans-serif;
+        }
+
+        label {
+            font-family: "Arial", Verdana, sans-serif;
+            font-size: small;
+        }
+
+        td, th {
+            padding: 1px 4px;
+        }
+
+        tr:nth-child(even) {
+            background: #CCC
+        }
+
+        tr:nth-child(odd) {
+            background: #FFF
+        }
+
+        label {
+            cursor: pointer;
+        }
+
+        input[type="checkbox"] {
+            cursor: pointer;
+        }
+
+    </style>
+
+    <link rel="shortcut icon" href="camel.png" type="image/png">
+    <title>IPv6 Camel</title>
+</head>
+<body>
+    <a href="https://github.com/stucchimax/protocol-camel">
+        <img style="position: absolute; top: 0; right: 0; border: 0;"
+            src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"
+            alt="Fork me on GitHub"></a>
+    <p>
+        🐫 Welcome to the IPv6 Camel Viewer! Please see <a href="https://github.com/stucchimax/protocol-camel">GitHub</a>
+        for what this is &amp; how to contribute.
+    </p>
+    <table width="75%">
+        <tr>
+            <td>
+                <div id="selector"></div>
+            </td>
+        </tr>
+    </table>
+    <p id="main"></p>
+    <div id="table"></div>
+    <p></p>
+    <span id="json"></span>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -25,53 +83,9 @@
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
 
-    <script src="ext/d3/d3.min.js"></script>
-    <script src="ipv6-rfcs.js"></script>
-    <style>
-      p,H1 {
-        font-family: "Arial", Verdana, sans-serif;
-      }
-      
-      label {
-        font-family: "Arial", Verdana, sans-serif;
-        font-size: small;
-      }
-      td, th {
-        padding: 1px 4px;
-      }
-      tr:nth-child(even) {background: #CCC}
-      tr:nth-child(odd) {background: #FFF}
-      label {
-        cursor: pointer;
-      }
-      input[type="checkbox"] {
-        cursor: pointer;
-      }
 
-    </style>
-
-    <script>
-        $(document).ready( function () {
-            $('#table').DataTable();
-        } );
-    </script>
-
-    <link rel="shortcut icon" href="camel.png" type="image/png">
-    <title>IPv6 Camel</title>
-  </head>
-  <body>
-    <a href="https://github.com/stucchimax/protocol-camel"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
-    <p>
-      🐫 Welcome to the IPv6 Camel Viewer! Please see <a href="https://github.com/stucchimax/protocol-camel">GitHub</a> for what this is &amp; how to contribute.
-    </p>
-    <table width="75%"><tr><td>
-    <div id="selector"></div></td></tr></table>
-    <p id="main"></p>
-          <div id="table"></div>
-    <p></p>
-    <span id="json"></span>
     <script src="camel-main.js"></script>
 
-  </body>
+</body>
 </html>
  
